<resources>
    <string name="app_name">MovieStreaming</string>
    <string name="genre">Genre</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="buy_account">Buy Account</string>
    <string name="profile">Profile</string>
    <string name="top_movie_imdb">Top Movie Imdb</string>
    <string name="more">  More ></string>
    <string name="new_movie">New Movie</string>
    <string name="series">Series</string>
    <string name="popular_movie">Popular Movie</string>
    <string name="animation">Animation</string>
    <string name="description">Description:</string>
    <string name="cast">Cast:</string>
    <string name="similarMovie">Similar Movie:</string>
    <string name="episodes">Episodes</string>
    <string name="chooseCategory">Choose Your Category:</string>
    <string name="goToApp">Go App</string>
    <string name="welcomeText">Watch Your Favorite Movie</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="noAccount">No Account?Sign UP</string>
    <string name="haveAccount">Have You Account?LogIn</string>
    <string name="emailValidate">Email Not Validate</string>
    <string name="loginFailed">Login Failed</string>
    <string name="registerFailed">Register Failed</string>
    <string name="emailNotExits">Email Not Exists</string>
    <string name="valueInput">Input are should not be empty</string>
    <string name="passwordValue">Password More 7 , Less 15</string>
    <string name="emailExits">Email Exists</string>
    <string name="verifyPhone">Verify Phone Number</string>
    <string name="check">Check</string>
    <string name="retry">Retry</string>
    <string name="internetConnection">No Internet !!</string>
    <string name="connected">Connected</string>
    <string name="watch_every">You Can Watch Everything !!!</string>
    <string name="download_all_movie">You Can Download All Movoie !!!</string>
    <string name="latest_movie">The latest movies !!!</string>
    <string name="personal_detail">Personal Detail</string>
    <string name="emailProfile">Email:</string>
    <string name="remaining_subscription">Remaining Subscription:</string>
    <string name="charge_account">Charge Account:</string>
    <string name="nothing">Nothing!!</string>
    <string name="deleteFavorite">To remove item from favorites, keep on the Movie photo</string>
    <string name="downloadFileWaiting">Downloading File please Wait…</string>
    <string name="downloadStarted">Downloading Started…</string>
    <string name="comment">Comment</string>
    <string name="sendComment">Send Comment…</string>
    <string name="buyAccount">You must Buy Account To Download Movie</string>
    <string name="textIsNull">Comment Text is Empty</string>
</resources>