<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.example.moviestreaming.customview.toolbar.MovieToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tittleToolbar="@string/buy_account">

    </com.example.moviestreaming.customview.toolbar.MovieToolbar>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_baseline_done_all_24"
        android:drawablePadding="8dp"
        android:text="@string/watch_every"
        android:layout_marginStart="8dp"
        android:textAppearance="?textAppearanceHeadline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
         />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:drawableStart="@drawable/ic_baseline_done_all_24"
        android:drawablePadding="8dp"
        android:text="@string/download_all_movie"
        android:textAppearance="?textAppearanceHeadline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_done_all_24"
        android:drawablePadding="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:text="@string/latest_movie"
        android:id="@+id/txt_latest"
        android:textAppearance="?textAppearanceHeadline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_latest"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:paddingStart="8dp"

        android:id="@+id/rv_buy_acc"/>






</androidx.constraintlayout.widget.ConstraintLayout>