<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <com.example.moviestreaming.customview.toolbar.MovieToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tittleToolbar="@string/profile" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView4"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_title_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/personal_detail"
                android:textAppearance="?textAppearanceHeadline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title_email_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/emailProfile"
                android:textAppearance="?textAppearanceHeadline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_profile" />



            <TextView
                android:id="@+id/tv_email_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="monospace"
                android:textAppearance="?textAppearanceHeadline5"
                app:layout_constraintBottom_toBottomOf="@+id/tv_title_email_profile"
                app:layout_constraintStart_toEndOf="@+id/tv_title_email_profile"
                app:layout_constraintTop_toTopOf="@+id/tv_title_email_profile"
                tools:text="amiralifeyzi1382@gmail.com" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_title_profile2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/personal_detail"
                android:textAppearance="?textAppearanceHeadline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                app:layout_constraintVertical_weight="3"
                android:id="@+id/tv_title_remaining_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/remaining_subscription"
                android:textAppearance="?textAppearanceHeadline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_profile2"
                />



            <TextView
                android:id="@+id/tv_count_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:layout_marginStart="8dp"
                android:textAppearance="?textAppearanceHeadline5"
                app:layout_constraintBottom_toBottomOf="@+id/tv_title_remaining_profile"
                app:layout_constraintStart_toEndOf="@+id/tv_title_remaining_profile"
                app:layout_constraintTop_toTopOf="@+id/tv_title_remaining_profile"
                tools:text="100 month" />


            <TextView
                android:id="@+id/tvTittleChargeAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/charge_account"
                android:textAppearance="?textAppearanceHeadline5"
                app:layout_constraintStart_toStartOf="@+id/tv_title_remaining_profile"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_remaining_profile"
                android:visibility="gone"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/tvChargeTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?textAppearanceHeadline5"
                app:layout_constraintBottom_toBottomOf="@+id/tvTittleChargeAccount"
                app:layout_constraintStart_toEndOf="@+id/tvTittleChargeAccount"
                app:layout_constraintTop_toTopOf="@+id/tvTittleChargeAccount"
                tools:text="+30 Day"
                android:visibility="gone"
                android:layout_marginStart="8dp"/>





        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>