<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.moviedetail.MovieDetailActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.example.moviestreaming.customview.imageview.MovieImageView
                    android:id="@+id/ivMovieDetail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>

                <ImageView
                    android:id="@+id/ivDownload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:src="@drawable/ic_baseline_get_app_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivComment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_baseline_insert_comment_24"
                    app:layout_constraintBottom_toBottomOf="@+id/ivDownload"
                    app:layout_constraintEnd_toStartOf="@+id/ivDownload"
                    app:layout_constraintTop_toTopOf="@+id/ivMovieDetail" />

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageView
                    android:id="@+id/ivPlayMovie"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_baseline_play_arrow_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/ivMovieDetail"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:cardCornerRadius="8dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/bg_detail_movie"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvNameMovieDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?textAppearanceBody2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Teen Wolf"
                        android:layout_margin="8dp"/>

                    <TextView
                        android:id="@+id/tvTimeMovieDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?textAppearanceBody2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="2h 23min"
                        android:layout_margin="8dp"/>

                    <ImageView
                        android:id="@+id/ivTimeDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_access_time_24"
                        app:layout_constraintBottom_toBottomOf="@+id/tvTimeMovieDetail"
                        app:layout_constraintEnd_toStartOf="@+id/tvTimeMovieDetail"
                        app:layout_constraintTop_toTopOf="@+id/tvTimeMovieDetail"
                        android:layout_margin="8dp"/>

                    <TextView
                        android:id="@+id/tvDirectorDetailMovie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?textAppearanceBody2"
                        app:layout_constraintStart_toStartOf="@+id/tvNameMovieDetail"
                        app:layout_constraintTop_toBottomOf="@+id/tvNameMovieDetail"
                        android:layout_marginTop="24dp"
                        tools:text="Director: Cris Nolan" />

                    <TextView
                        android:id="@+id/tvPublishedDetailMovie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAppearance="?textAppearanceBody2"
                        app:layout_constraintStart_toStartOf="@id/tvDirectorDetailMovie"
                        app:layout_constraintTop_toBottomOf="@id/tvDirectorDetailMovie"
                        tools:text="Published: 12Nov 2012" />

                    <TextView
                        android:id="@+id/tvRateImdbMovieDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_rate_imdb"
                        android:padding="2dp"
                        android:textAppearance="?textAppearanceBody2"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvPublishedDetailMovie"
                        tools:text="Imdb: 9.1/10"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"/>


                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/description"
                        android:textAppearance="?textAppearanceBody2"
                        app:layout_constraintStart_toStartOf="@+id/tvPublishedDetailMovie"
                        app:layout_constraintTop_toBottomOf="@+id/tvRateImdbMovieDetail" />

                    <TextView
                        android:id="@+id/tvDescriptionDetailMovie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?textAppearanceBody1"
                        app:layout_constraintStart_toStartOf="@+id/textView2"
                        app:layout_constraintTop_toBottomOf="@+id/textView2"
                        android:padding="8dp"
                        tools:text="Teen Wolf is an American supernatural teen drama television series developed by Jeff Davis for MTV, loosely based on the 1985 film of the same name. Tyler Posey portrays the title character, a young werewolf who defends his California town from supernatural creatures and other threats."
                        />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvSeasonMovieDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:clipToPadding="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvDescriptionDetailMovie" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/cast"
                        android:textAppearance="?textAppearanceBody2"
                        app:layout_constraintStart_toStartOf="@+id/textView2"
                        app:layout_constraintTop_toBottomOf="@+id/rvSeasonMovieDetail" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvCastDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:paddingStart="8dp"
                        android:clipToPadding="false"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView3" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tvSimilar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?textAppearanceBody2"
                android:text="@string/similarMovie"
                app:layout_constraintTop_toBottomOf="@id/cardView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="8dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvSimilar"
                android:layout_marginTop="8dp"
                android:id="@+id/rvSimilarMovie"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>







</androidx.constraintlayout.widget.ConstraintLayout>